syntax = "proto3";

package vdp.controller.v1beta;

import "../../../common/healthcheck/v1beta/healthcheck.proto";
// Google api
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
// Protobuf standard
import "protoc-gen-openapiv2/options/annotations.proto";
import "../../../vdp/pipeline/v1beta/connector.proto";
import "../../../vdp/pipeline/v1beta/pipeline.proto";

// LivenessRequest represents a request to check a service liveness status
message LivenessRequest {
  // HealthCheckRequest message
  optional common.healthcheck.v1beta.HealthCheckRequest health_check_request = 1 [(google.api.field_behavior) = OPTIONAL];
}

// LivenessResponse represents a response for a service liveness status
message LivenessResponse {
  // HealthCheckResponse message
  common.healthcheck.v1beta.HealthCheckResponse health_check_response = 1;
}

// ReadinessRequest represents a request to check a service readiness status
message ReadinessRequest {
  // HealthCheckRequest message
  optional common.healthcheck.v1beta.HealthCheckRequest health_check_request = 1 [(google.api.field_behavior) = OPTIONAL];
}

// ReadinessResponse represents a response for a service readiness status
message ReadinessResponse {
  // HealthCheckResponse message
  common.healthcheck.v1beta.HealthCheckResponse health_check_response = 1;
}

// Resource represents the current information of a resource
message Resource {
  option (google.api.resource) = {
    type: "api.instill.tech/Resource"
    pattern: "resources/{resource_uuid}/types/{type}"
  };

  // Permalink of a resouce. For example:
  // "resources/{resource_uuid}/types/{type}"
  string resource_permalink = 1 [(google.api.field_behavior) = REQUIRED];
  // Resource state
  oneof state {
    // Pipeline state
    vdp.pipeline.v1beta.State pipeline_state = 3;
    // Connector state
    vdp.pipeline.v1beta.Connector.State connector_state = 4;
    // Backend service state
    common.healthcheck.v1beta.HealthCheckResponse.ServingStatus backend_state = 5;
  }
  // Resource longrunning progress
  optional int32 progress = 6 [(google.api.field_behavior) = OPTIONAL];
}

// GetResourceRequest represents a request to query a resource's state
message GetResourceRequest {
  // Permalink of a resouce. For example:
  // "resources/{resource_uuid}/types/{type}"
  string resource_permalink = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "api.instill.tech/Resource"},
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      field_configuration: {path_param_name: "resource.resource_permalink"}
    }
  ];
}

// GetResourceResponse represents a response to fetch a resource's state
message GetResourceResponse {
  // Retrieved resource state
  Resource resource = 1;
}

// UpdateResourceRequest represents a request to update a resource's state
message UpdateResourceRequest {
  // Resource state
  Resource resource = 1 [(google.api.field_behavior) = REQUIRED];
  // Resource longrunnning workflow id
  optional string workflow_id = 2 [(google.api.field_behavior) = OPTIONAL];
}

// UpdateResourceResponse represents a response to update a resource's state
message UpdateResourceResponse {
  // Updated resource state
  Resource resource = 1;
}

// DeleteResourceRequest represents a request to delete a resource's state
message DeleteResourceRequest {
  // Permalink of a resouce. For example:
  // "resources/{resource_uuid}/types/{type}"
  string resource_permalink = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {type: "api.instill.tech/Resource"},
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      field_configuration: {path_param_name: "resource.resource_permalink"}
    }
  ];
}

// DeleteResourceResponse represents an empty response
message DeleteResourceResponse {}
